# kcd2lua

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: release.yml
cpp/: CMakeLists.txt  build.sh
cpp/src/: dllmain.cpp
vscode_extension/: .vscodeignore  README.md  kcd2-lua-1.0.0.vsix  kcd2-lua-run-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
vscode_extension/src/: autorunner.ts  extension.ts  luamin.d.ts  scriptloader.ts  version-checker.ts
